@@ -1,3 +1,7 @@
+2007-01-02 Tim
+ PATCH: [ 1624905 ] Manual: Remove <productname>
+  Manual: Faq.xml Open_paths.xml
+
 2006-12-30 Tim
  PATCH: [ 1623604 ] Manual: Remove <screen> from Command_line.xml
   Manual: Command_line.xml
